--- a/Web.config
+++ b/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="QLBansachEntities" connectionString="metadata=res://*/Models.SachModel.csdl|res://*/Models.SachModel.ssdl|res://*/Models.SachModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ADMIN-PC\SQLEXPRESS;initial catalog=QLBansach;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="QLBansachEntities" connectionString="metadata=res://*/Models.SachModel.csdl|res://*/Models.SachModel.ssdl|res://*/Models.SachModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A5O3G0S\SQLEXPRESS;initial catalog=QLBansach;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
